@@ -21,3 +21,9 @@ dependencies {
   latestDepTestLibrary("org.apache.dubbo:dubbo:2.+") // documented limitation
   latestDepTestLibrary("org.apache.dubbo:dubbo-config-api:2.+") // documented limitation
 }
+
+tasks.withType<Test>().configureEach {
+  // to suppress non-fatal errors on jdk17
+  jvmArgs("--add-opens=java.base/java.math=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
